Added comments for most of the classes and their methods