@@ -16,18 +16,28 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.UUID;
 
-
+/**
+ * Represents an abstract world map for a simulation.
+ * Manages the placement and movement of animals and plants,
+ * while notifying observers about changes.
+ */
 public abstract class AbstractWorldMap implements MoveValidator {
-    protected final List<MapChangeListener> observers;
-    protected final MapVisualizer mapVisualizer;
-    protected final UUID id;
-    protected HashMap<Vector2d, List<Animal>> animals;
-    protected HashMap<Vector2d, Plant> plants;
-    protected List<Vector2d> freePlantPositions;
-    protected int width;
-    protected int height;
+    protected final List<MapChangeListener> observers; // List of observers notified when the map changes.
+    protected final MapVisualizer mapVisualizer; // Visualizer responsible for rendering the map.
+    protected final UUID id; // Unique identifier for the map instance.
+    protected HashMap<Vector2d, List<Animal>> animals; // Mapping of positions to animals.
+    protected HashMap<Vector2d, Plant> plants; // Mapping of positions to plants.
+    protected List<Vector2d> freePlantPositions; // List of free positions available for plants.
+    // Dimensions of the map.
+    protected int width; // Width of the map
+    protected int height; // Height of the map
 
-    // constructor
+    /**
+     * Constructs an abstract world map using simulation properties.
+     * Initializes the dimensions, animals, plants, and free positions for plants.
+     *
+     * @param simulationProperties      Properties defining the simulation parameters.
+     */
     public AbstractWorldMap(SimulationProperties simulationProperties) {
         this.observers = new ArrayList<>();
         this.mapVisualizer = new MapVisualizer(this);
@@ -38,6 +48,7 @@ public abstract class AbstractWorldMap implements MoveValidator {
         this.width = simulationProperties.getWidth();
         this.height = simulationProperties.getHeight();
 
+        // Populate the list of free positions with all positions on the map.
         for (int x = 0; x < this.width; x++) {
             for (int y = 0; y < this.height; y++) {
                 Vector2d position = new Vector2d(x, y);
@@ -46,27 +57,52 @@ public abstract class AbstractWorldMap implements MoveValidator {
         }
     }
 
+    /**
+     * Places an animal at a given position on the map.
+     * If there are already animals at the position, the new one is added to the list.
+     *
+     * @param position      The position to place the animal.
+     * @param animal        The animal to place.
+     */
     public void placeAnimal(Vector2d position, Animal animal) {
         if (this.animals.containsKey(position)) {
             this.animals.get(position).add(animal);
-        }
-        else {
+        } else {
             List<Animal> animalList = new ArrayList<>();
             animalList.add(animal);
             this.animals.put(position, animalList);
         }
     }
 
+    /**
+     * Removes an animal from its current position on the map.
+     * Notifies observers that the animal has died.
+     *
+     * @param animal        The animal to remove.
+     */
     public void removeAnimal(Animal animal) {
         this.animals.get(animal.getPos()).remove(animal);
         notifyObservers("Animal died at " + animal.getPos() + ".");
     }
 
+    /**
+     * Places a plant at a given position on the map.
+     * Removes the position from the list of free plant positions.
+     *
+     * @param position      The position to place the plant.
+     * @param plant         The plant to place.
+     */
     public void placePlant(Vector2d position, Plant plant) {
         this.plants.put(position, plant);
         this.freePlantPositions.remove(position);
     }
 
+    /**
+     * Moves an animal to a new position on the map.
+     * Updates the animal's position and notifies observers of the change.
+     *
+     * @param animal        The animal to move.
+     */
     public void move(Animal animal) {
         Vector2d oldPos = animal.getPos();
         this.animals.get(animal.getPos()).remove(animal);
@@ -75,31 +111,61 @@ public abstract class AbstractWorldMap implements MoveValidator {
         notifyObservers("Animal moved from " + oldPos + " to " + animal.getPos() + ".");
     }
 
+    /**
+     * Returns the object (animal or plant) located at a given position on the map.
+     *
+     * @param position      The position to check.
+     * @return              The object at the position, or null if none exists.
+     */
     public WorldElement objectAt(Vector2d position) {
         if (this.animals.containsKey(position)) {
             if (!this.animals.get(position).isEmpty())
-                return this.animals.get(position).getFirst();
+                return this.animals.get(position).get(0);
         }
         if (this.plants.containsKey(position)) return this.plants.get(position);
         return null;
     }
 
-    // observers
-    public void addObserver(MapChangeListener observer) {this.observers.add(observer);}
+    /**
+     * Adds an observer to the list of map change listeners.
+     *
+     * @param observer      The observer to add.
+     */
+    public void addObserver(MapChangeListener observer) {
+        this.observers.add(observer);
+    }
+
+    /**
+     * Notifies all observers of a change in the map.
+     *
+     * @param message       The message describing the change.
+     */
     public void notifyObservers(String message) {
         for (MapChangeListener observer : this.observers) {
             observer.mapChanged(this, message);
         }
     }
 
+    /**
+     * Corrects an animal's position and direction when it moves outside the map boundaries.
+     * Handles wrapping and redirection based on the map's dimensions.
+     * Wraps positions horizontally and reflects directions vertically.
+     *
+     * @param oldPosition       The animal's previous position.
+     * @param newPosition       The animal's new position.
+     * @param direction         The animal's current direction.
+     * @return                  A tuple containing the corrected position and direction.
+     */
     @Override
     public PositionDirectionTuple correctPosition(Vector2d oldPosition, Vector2d newPosition, MapDirection direction) {
         int newX = newPosition.x() % this.width;
         int newY = newPosition.y();
         MapDirection newDirection = direction;
+
+        // Adjust position and direction if crossing vertical boundaries.
         if (newY < 0) {
             newY = 1;
-            newDirection = switch(direction) {
+            newDirection = switch (direction) {
                 case SOUTH -> MapDirection.NORTH;
                 case SOUTHEAST -> MapDirection.NORTHEAST;
                 case SOUTHWEST -> MapDirection.NORTHWEST;
@@ -108,7 +174,7 @@ public abstract class AbstractWorldMap implements MoveValidator {
         }
         if (newY >= this.height) {
             newY = this.height - 2;
-            newDirection = switch(direction) {
+            newDirection = switch (direction) {
                 case NORTH -> MapDirection.SOUTH;
                 case NORTHEAST -> MapDirection.SOUTHEAST;
                 case NORTHWEST -> MapDirection.SOUTHWEST;
@@ -118,15 +184,34 @@ public abstract class AbstractWorldMap implements MoveValidator {
         return new PositionDirectionTuple(new Vector2d(newX, newY), newDirection);
     }
 
+    /**
+     * Renders the current map as a string representation using the map visualizer.
+     *
+     * @return          The string representation of the map.
+     */
     @Override
     public String toString() {
         return this.mapVisualizer.draw(getCurrentBounds().lowerLeft(), getCurrentBounds().upperRight());
     }
 
-    // getters
-    public HashMap<Vector2d, List<Animal>> getAnimals() {return this.animals;}
-    public HashMap<Vector2d, Plant> getPlants() {return this.plants;}
-    public List<Vector2d> getFreePlantPositions() {return this.freePlantPositions;}
-    public UUID getID() {return this.id;}
-    public Boundary getCurrentBounds() {return new Boundary(new Vector2d(0, 0), new Vector2d(this.width - 1, this.height - 1));}
+    // Getters for map properties.
+    public HashMap<Vector2d, List<Animal>> getAnimals() {
+        return this.animals;
+    }
+
+    public HashMap<Vector2d, Plant> getPlants() {
+        return this.plants;
+    }
+
+    public List<Vector2d> getFreePlantPositions() {
+        return this.freePlantPositions;
+    }
+
+    public UUID getID() {
+        return this.id;
+    }
+
+    public Boundary getCurrentBounds() {
+        return new Boundary(new Vector2d(0, 0), new Vector2d(this.width - 1, this.height - 1));
+    }
 }
